--- a/main.html
+++ b/main.html
@@ -8,9 +8,44 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
- 
+
+<style>
+  .manrope{
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+   
+}
+
+
+</style>
+
 </head>
 <body>
-    
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <header class="mt-10 pb-20 flex justify-between">
+              <div>
+                  <h1 class="text-5xl md:text-7xl manrope text-[#1C1C1C]">It's good <br>tea time at The <br> Tea House</h1>
+                  <br>
+                  <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br>Satisfaction To Your Taste Buds.</p>
+                  <br>
+                  <button class="inline-flex bg-gradient-to-r to-[#FF0000] from-[#FF8938] p-5 text-white rounded-xl">Explore More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+                 </svg>
+                 </button>
+              </div>
+              <div class="relative">
+                  <img class="pt-4 " src="images/banner.png" alt="">
+                  <section class="absolute inline-flex  bg-white rounded shadow-lg top-28 md:top-96 md:left-32">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6 text-amber-400">
+                    <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z" clip-rule="evenodd" />
+                    </svg>
+                    <div>
+                     <h2 class="text-xl font-bold">5.00</h2>
+                    <p class="text-[#777777]">Trust Pilot Ratings</p>
+                    </div>
+                  </section>
+              </div>
+        </header>
+    </main>
 </body>
 </html>
