--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
               </div>
               <div class="relative">
                   <img class="pt-4 " src="images/banner.png" alt="">
-                  <section class="absolute inline-flex  bg-white rounded shadow-lg top-28 md:top-96 md:left-32">
+                  <section class="absolute inline-flex bg-white rounded shadow-lg top-28 md:top-96 md:left-32">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6 text-amber-400">
                     <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z" clip-rule="evenodd" />
                     </svg>
@@ -46,6 +46,67 @@
                   </section>
               </div>
         </header>
+        <section class="py-8 pb-32">
+            <div class="text-center mb-10">
+                 <h1 class="font-bold text-3xl">Our Featured Products</h1>
+            <p class="text-gray-600">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            </div>
+            <div class="grid md:grid-cols-4 gap-4 text-center">
+             <div class="bg-gray-100 rounded-lg shadow-md">
+                <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+                <div class="p-4">
+                    <h1 class="text-xl font-bold">Milk Tea</h1>
+                    <p class="p-4 text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+             </div>
+                         <div class="bg-gray-100 rounded-lg shadow-md">
+                <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+                <div class="p-4">
+                    <h1 class="text-xl font-bold">Black Tea</h1>
+                    <p class="p-4 text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+             </div>
+                         <div class="bg-gray-100 rounded-lg shadow-md">
+                <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+                <div class="p-4">
+                    <h1 class="text-xl font-bold">Lemon Tea</h1>
+                    <p class="p-4 text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+             </div>
+                         <div class="bg-gray-100 rounded-lg shadow-md">
+                <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+                <div class="p-4">
+                    <h1 class="text-xl font-bold">Green Tea</h1>
+                    <p class="p-4 text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+             </div>
+            </div>
+        </section>
+        
+        <section class="pb-24">
+            <div class="grid grid-cols-2">
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 w-4/5">
+                   <div class="bg-gradient-to-r from-red-200 to-red-100 rounded-xl"></div>
+                   <div class="bg-red-50 rounded-xl  row-span-2">
+                   <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+                   </div>
+                   <div class="bg-stone-100 rounded-xl row-span-2">
+                   <img class="mx-auto py-5" src="images/fresh-2.png" alt="">
+                   </div>
+                    <div class="bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"></div>
+                </div>
+                <div>
+                    <h1 class="text-3xl font-bold pb-6">Great Tea, Freshly <br> Presented</h1>
+                    <p class="text-gray-600">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h2 class="text-xl font-bold pb-3">Unique Taste</h2>
+                    <p class="text-gray-600">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <br>
+                    <h1 class="text-xl font-bold pb-3">Premium Quality</h1>
+                    <p class="text-gray-600">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
